--- a/src/assets/styles/element-variables.scss
+++ b/src/assets/styles/element-variables.scss
@@ -4,7 +4,8 @@
 **/
 
 /* theme color */
-$--color-primary: #1890ff;
+/* $--color-primary: #1890ff; #016B09*/
+$--color-primary: #016B09;
 $--color-success: #13ce66;
 $--color-warning: #ffba00;
 $--color-danger: #ff4949;
